设置 非root用户无密码操作

--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -11,7 +11,7 @@ RUN mv /usr/local/hadoop-2.7.3 /usr/local/hadoop
 #配置操作用户 和无密码操作权限
 RUN adduser hdoper
 RUN chmod u+w /etc/sudoers
-RUN sed -i ‘’ '/root	ALL=(ALL) 	ALL/a\hdoper ALL=(ALL) NOPASSWD: ALL' /etc/sudoers
+RUN sed -i '/root/a\hdoper ALL=(ALL) NOPASSWD: ALL' /etc/sudoers
 RUN chmod u-w /etc/sudoers
 
 # 配置无密码登陆到本机，首相生成公私钥对，然后建立authorized_keys文件
